# SPAECIES

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  E3smData.ipynb  FindNetCDF.cmake  LICENSE  Makefile  README.md  Rainshaft.ipynb  cmake_install.cmake
demonstrations/SizeSorting/: SizeSorting.ipynb
examples/: settings.ini
libspaecies/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  contiguous_variable.hpp  contiguous_variable_view.hpp  dimension.cpp  dimension.hpp  domain.cpp  domain.hpp  exceptions.cpp  exceptions.hpp  spaecies.cpp  spaecies.hpp  state.hpp  tendency.hpp  variable.hpp  variable_array.hpp  variable_array_view.hpp  variable_descriptor.cpp  variable_descriptor.hpp  variable_view.hpp
rainshaft/: CMakeLists.txt  CTestTestfile.cmake  Makefile  accretion.cpp  accretion.hpp  autoconversion.cpp  autoconversion.hpp  cloud_sedimentation.cpp  cloud_sedimentation.hpp  cmake_install.cmake  derivatives.hpp  evaporation.cpp  evaporation.hpp  example_utilities.hpp  explicit_integrator.cpp  explicit_integrator.hpp  fixed_substep_integrator.cpp  fixed_substep_integrator.hpp  forcing_integrator.cpp  forcing_integrator.hpp  forward_euler_integrator.cpp  forward_euler_integrator.hpp  idea.hpp  imex_integrator.cpp  imex_integrator.hpp  implicit_integrator.cpp  implicit_integrator.hpp  limiting_integrator.cpp  limiting_integrator.hpp  lookup_linear.cpp  lookup_linear.hpp  lookup_table.cpp  lookup_table.hpp  mri_integrator.cpp  mri_integrator.hpp  nudging.cpp  nudging.hpp  nvector_serial_diagnostic.cpp  nvector_serial_diagnostic.hpp  operator_splitting_integrator.cpp  (+47 more)
scripts/: adaptive_logfiles.sh  cprnc.py  plot_workprecision.py  reference_lambdar_regularized.sh  reference_qsatdry_regularized.sh  reference_solutions.sh  run_rainshaft.sh  run_rainshaft_for_convergence.bash  workprecision_adaptivestep.sh  workprecision_adaptivestep_abstol0.sh  workprecision_fixedstep.sh  workprecision_operator_splitting.sh  workprecision_operator_splitting_nolimiter.sh  workprecision_runscript.sh  workprecision_runscripts.sh
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test.cpp  tests_include-b12d07c.cmake
tools/: CMakeLists.txt  analyze_timescales.cpp
