add_executable(rainshaft
  evaporation.cpp
  explicit_integrator.cpp
  imex_integrator.cpp
  mri_integrator.cpp
  fixed_substep_integrator.cpp
  limiting_integrator.cpp
  lookup_linear.cpp
  nudging.cpp
  parsing_utilities.cpp
  rainshaft_driver.cpp
  rainshaft_derived_vars.cpp
  rainshaft_grid.cpp
  rainshaft_initial.cpp
  rainshaft_ncio.cpp
  rainshaft_solution.cpp
  rainshaft_sum_process.cpp
  rainshaft_tend_descs.cpp
  saturation.cpp
  sed_cfl_integrator.cpp
  sedimentation.cpp
  self_collision.cpp
  sequential_split_integrator.cpp
)
target_link_libraries(rainshaft
  NetCDF::NetCDF
  SUNDIALS::arkode
  SUNDIALS::sunlinsollapackdense
  Boost::boost
  Boost::program_options
  stdc++fs
  spaecies)
target_include_directories(rainshaft PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
)
