add_executable(rainshaft
  accretion.cpp
  autoconversion.cpp
  evaporation.cpp
  explicit_integrator.cpp
  imex_integrator.cpp
  mri_integrator.cpp
  fixed_substep_integrator.cpp
  forcing_integrator.cpp
  limiting_integrator.cpp
  operator_splitting_integrator.cpp
  lookup_linear.cpp
  nudging.cpp
  nvector_serial_diagnostic.cpp
  parsing_utilities.cpp
  rain_sedimentation.cpp
  rainshaft_driver.cpp
  rainshaft_derived_vars.cpp
  rainshaft_grid.cpp
  rainshaft_initial.cpp
  rainshaft_ncio.cpp
  rainshaft_solution.cpp
  rainshaft_sum_process.cpp
  rainshaft_tend_descs.cpp
  saturation.cpp
  sed_cfl_integrator.cpp
  self_collision.cpp
  sequential_split_integrator.cpp
  size_limiters.cpp
)
target_link_libraries(rainshaft
  NetCDF::NetCDF
  SUNDIALS::arkode
  SUNDIALS::sunlinsollapackdense
  Boost::boost
  Boost::program_options
  spaecies)
target_include_directories(rainshaft PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
)
